# GrooveFirmware

./: CMakeLists.txt
src/: main.cpp
src/Audio/: AudioPlayer.cpp  AudioPlayer.h
src/Sample/: Sample.cpp  Sample.h
src/libs/: AudioFile.cpp
